# winit_playground

./: Cargo.toml  README.md
src/: main.rs
src/data/: gol_001.json
