[package]
name = "winit_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
pixels = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
winit = "0.28.6"
